@@ -1,21 +1,27 @@
 package com.crm.client.service;
 
-import com.crm.client.dto.ClientRequest;
-import com.crm.client.dto.ClientResponse;
-import com.crm.client.dto.PaymentStatus;
+import com.crm.client.dto.*;
 import com.crm.client.entity.Client;
 import com.crm.client.entity.ClientFile;
+import com.crm.client.entity.ClientPaymentHistory;
+import com.crm.client.entity.DocumentType;
 import com.crm.client.repository.ClientFileRepository;
+import com.crm.client.repository.ClientPaymentHistoryRepository;
 import com.crm.client.repository.ClientRepository;
 import com.crm.common.exception.CustomException;
-import com.crm.lead.dto.LeadContactHistoryResponse;
-import com.crm.lead.service.LeadContactHistoryService;
+import com.crm.lead.entity.Lead;
+import com.crm.lead.reposiroty.LeadRepository;
 import com.crm.reception.entity.VisitSchedule;
 import com.crm.reception.entity.VisitStatus;
 import com.crm.reception.repository.VisitScheduleRepository;
+import com.crm.user.entity.User;
+import com.crm.user.repository.UserRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -24,24 +30,28 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
 public class ClientService {
-    @Autowired
-    private LeadContactHistoryService historyService;
-
     private final ClientRepository clientRepository;
     private final ClientFileRepository fileRepository;
+    private final ClientPaymentHistoryRepository paymentHistoryRepository;
+    private final LeadRepository leadRepository;
     private final VisitScheduleRepository visitScheduleRepository;
-
+    private final UserRepository userRepository;
     private final String UPLOAD_DIR = "uploads/clients/";
 
-    // ✅ Client yaratish
+    // CREATE
     public ClientResponse createClient(ClientRequest request) {
+        Lead lead = request.getLeadId() != null
+                ? leadRepository.findById(request.getLeadId()).orElse(null)
+                : null;
+
         Client client = Client.builder()
                 .fullName(request.getFullName())
                 .phone1(request.getPhone1())
@@ -52,19 +62,254 @@ public class ClientService {
                 .initialPaymentDate(request.getInitialPaymentDate())
                 .totalPayment(request.getTotalPayment())
                 .totalPaymentDate(request.getTotalPaymentDate())
-                .paymentStatus(request.getPaymentStatus() != null ? request.getPaymentStatus() : PaymentStatus.PENDING)
+                .paymentStatus(request.getPaymentStatus())
+                .contractNumber(request.getContractNumber()) // ✅ qo‘shildi
+                .lead(lead)
+                .convertedBy(getCurrentUser())
+                .deleted(false)
+                .archived(false)
                 .build();
 
+        return mapToResponse(clientRepository.save(client));
+    }
+    @Transactional
+    public ClientResponse updatePaymentStatus(Long id, PaymentStatus status) {
+        System.out.println(">>> UPDATE STATUS kelgan: " + status);
+
+        Client client = clientRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Client not found"));
+
+        client.setPaymentStatus(status);
         clientRepository.save(client);
+
         return mapToResponse(client);
     }
 
 
-    // ✅ Barcha clientlarni olish
+
+    // ✅ Komment qo‘shish
+    public ClientResponse addComment(Long clientId, String comment) {
+        Client client = clientRepository.findById(clientId)
+                .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
+
+        client.getComments().add(comment);
+        clientRepository.save(client);
+
+        return mapToResponse(client);
+    }
+
+    // ✅ ConvertedBy set qilish
+    public ClientResponse setConvertedBy(Long clientId, Long userId) {
+        Client client = clientRepository.findById(clientId)
+                .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
+
+        client.setConvertedBy(user);
+        clientRepository.save(client);
+
+        return mapToResponse(client);
+    }
+
+
+
+    //get all cliknes
+    public List<ClientResponse> getClientsByStatus(String type) {
+        List<Client> clients;
+
+        switch (type.toLowerCase()) {
+            case "archived":
+                clients = clientRepository.findByArchivedTrueAndDeletedFalse();
+                break;
+            case "deleted":
+                clients = clientRepository.findByDeletedTrue();
+                break;
+            case "active":
+            default:
+                clients = clientRepository.findByArchivedFalseAndDeletedFalse();
+                break;
+        }
+
+        return clients.stream()
+                .map(this::mapToResponse)
+                .toList();
+    }
+
+
+
+    // File upload
+    // ✅ Fayl yuklash
+    public ClientResponse uploadFile(Long clientId, MultipartFile file, DocumentType type) throws IOException {
+        Client client = clientRepository.findById(clientId)
+                .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
+
+        String clientDir = UPLOAD_DIR + clientId + "/";
+        Path uploadPath = Paths.get(clientDir);
+        if (!Files.exists(uploadPath)) Files.createDirectories(uploadPath);
+
+        // Fayl nomini unikallash
+        String uniqueName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+        String filePath = clientDir + uniqueName;
+        file.transferTo(new File(filePath));
+
+        ClientFile clientFile = ClientFile.builder()
+                .fileName(file.getOriginalFilename())
+                .fileType(file.getContentType())
+                .filePath(filePath)
+                .documentType(type)
+                .client(client)
+                .build();
+
+        fileRepository.save(clientFile);
+        return mapToResponse(client);
+    }
+
+    // ✅ Fayl o‘chirish
+    public void deleteFile(Long clientId, Long fileId) {
+        ClientFile file =  fileRepository.findByIdAndClientId(fileId, clientId)
+                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
+
+        File diskFile = new File(file.getFilePath());
+        if (diskFile.exists()) diskFile.delete();
+
+        fileRepository.delete(file);
+    }
+    // ✅ Fayl yangilash (eski faylni o‘chirib, yangi yuklash)
+    public ClientResponse updateFile(Long clientId, Long fileId, MultipartFile newFile, DocumentType type) throws IOException {
+        ClientFile file =  fileRepository.findByIdAndClientId(fileId, clientId)
+                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
+
+        // Eski faylni diskdan o‘chirish
+        File oldFile = new File(file.getFilePath());
+        if (oldFile.exists()) oldFile.delete();
+
+        String clientDir = UPLOAD_DIR + clientId + "/";
+        Path uploadPath = Paths.get(clientDir);
+        if (!Files.exists(uploadPath)) Files.createDirectories(uploadPath);
+
+        String uniqueName = UUID.randomUUID() + "_" + newFile.getOriginalFilename();
+        String newFilePath = clientDir + uniqueName;
+        newFile.transferTo(new File(newFilePath));
+
+        file.setFileName(newFile.getOriginalFilename());
+        file.setFileType(newFile.getContentType());
+        file.setFilePath(newFilePath);
+        file.setDocumentType(type);
+
+        fileRepository.save(file);
+        return mapToResponse(file.getClient());
+    }
+    // ✅ Fayl preview
+    public byte[] previewFile(Long clientId, Long fileId) throws IOException {
+        ClientFile file =  fileRepository.findByIdAndClientId(fileId, clientId)
+                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
+
+        Path path = Paths.get(file.getFilePath());
+        return Files.readAllBytes(path);
+    }
+
+    public String getFileType(Long clientId, Long fileId) {
+        ClientFile file =  fileRepository.findByIdAndClientId(fileId, clientId)
+                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
+        return file.getFileType() != null ? file.getFileType() : MediaType.APPLICATION_OCTET_STREAM_VALUE;
+    }
+
+    // ✅ Fayl nomini olish
+    public String getFileName(Long clientId, Long fileId) {
+        ClientFile file = fileRepository.findByIdAndClientId(fileId, clientId)
+                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
+        return file.getFileName();
+    }
+
+    // Add payment
+    public ClientResponse addPayment(Long clientId, Double amount, PaymentStatus status) {
+        Client client = clientRepository.findById(clientId)
+                .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
+
+        ClientPaymentHistory history = ClientPaymentHistory.builder()
+                .amount(amount)
+                .paymentDate(LocalDateTime.now())
+                .status(status)
+                .client(client)
+                .receivedBy(getCurrentUser())
+                .build();
+
+        paymentHistoryRepository.save(history);
+
+        client.setPaymentStatus(status); // oxirgi status
+        clientRepository.save(client);
+
+        return mapToResponse(client);
+    }
+
+    private ClientResponse mapToResponse(Client client) {
+        return ClientResponse.builder()
+                .id(client.getId())
+                .fullName(client.getFullName())
+                .phone1(client.getPhone1())
+                .phone2(client.getPhone2())
+                .region(client.getRegion())
+                .targetCountry(client.getTargetCountry())
+                .initialPayment(client.getInitialPayment())
+                .initialPaymentDate(client.getInitialPaymentDate())
+                .totalPayment(client.getTotalPayment())
+                .totalPaymentDate(client.getTotalPaymentDate())
+                .paymentStatus(client.getPaymentStatus())
+                .contractNumber(client.getContractNumber())
+                .convertedBy(client.getConvertedBy() != null ? client.getConvertedBy().getFullName() : null)
+                .files(client.getFiles() != null
+                        ? client.getFiles().stream()
+                        .map(f -> ClientFileResponse.builder()
+                                .id(f.getId())
+                                .fileName(f.getFileName())
+                                .fileType(f.getFileType())
+                                .documentType(f.getDocumentType().name())
+                                .previewUrl("/clients/" + client.getId() + "/files/" + f.getId() + "/preview")
+                                .downloadUrl("/clients/" + client.getId() + "/files/" + f.getId() + "/download")
+                                .build())
+                        .toList()
+                        : List.of())
+                .payments(client.getPaymentHistory() != null
+                        ? client.getPaymentHistory().stream()
+                        .map(p -> ClientPaymentHistoryResponse.builder()
+                                .id(p.getId())
+                                .amount(p.getAmount())
+                                .paymentDate(p.getPaymentDate().toLocalDate())
+                                .status(String.valueOf(p.getStatus()))
+                                .receivedBy(p.getReceivedBy() != null ? p.getReceivedBy().getFullName() : null)
+                                .build())
+                        .toList()
+                        : List.of())
+                .nextVisitDate(
+                        visitScheduleRepository.findFirstByClientIdAndStatusOrderByScheduledDateTimeAsc(
+                                        client.getId(), VisitStatus.PLANNED
+                                )
+                                .map(VisitSchedule::getScheduledDateTime)
+                                .orElse(null)
+                )
+                .comments(client.getComments())
+                .build();
+    }
+
+
+    private User getCurrentUser() {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        if (principal instanceof User user) {
+            return user; // agar entity saqlangan bo‘lsa
+        } else if (principal instanceof org.springframework.security.core.userdetails.User springUser) {
+            // Agar Spring Security UserDetails bo‘lsa
+            return userRepository.findByEmail(springUser.getUsername())
+                    .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
+        }
+
+        throw new CustomException("Authenticated user not found", HttpStatus.UNAUTHORIZED);
+    }
     public List<ClientResponse> getAllClients() {
         return clientRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ✅ Bitta clientni olish
@@ -74,7 +319,7 @@ public class ClientService {
         return mapToResponse(client);
     }
 
-    // ✅ PATCH: faqat yuborilgan maydonlarni yangilash
+    // ✅ PATCH: faqat yuborilgan fieldlarni yangilash
     public ClientResponse updateClient(Long id, ClientRequest request) {
         Client client = clientRepository.findById(id)
                 .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
@@ -89,12 +334,12 @@ public class ClientService {
         if (request.getTotalPayment() != null) client.setTotalPayment(request.getTotalPayment());
         if (request.getTotalPaymentDate() != null) client.setTotalPaymentDate(request.getTotalPaymentDate());
         if (request.getPaymentStatus() != null) client.setPaymentStatus(request.getPaymentStatus());
+        if (request.getContractNumber() != null) client.setContractNumber(request.getContractNumber());
 
-        clientRepository.save(client);
-        return mapToResponse(client);
+        return mapToResponse(clientRepository.save(client));
     }
 
-    // ✅ Client o‘chirish
+    // ✅ Client o‘chirish (hard delete)
     public void deleteClient(Long id) {
         if (!clientRepository.existsById(id)) {
             throw new CustomException("Client not found", HttpStatus.NOT_FOUND);
@@ -103,65 +348,10 @@ public class ClientService {
     }
 
     // ✅ File yuklash
-    public ClientResponse uploadFile(Long clientId, MultipartFile file) throws IOException {
-        Client client = clientRepository.findById(clientId)
-                .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
 
-        String clientDir = UPLOAD_DIR + clientId + "/";
-        Path uploadPath = Paths.get(clientDir);
-        if (!Files.exists(uploadPath)) {
-            Files.createDirectories(uploadPath);
-        }
+    // ✅ To‘lov qo‘shish
 
-        String filePath = clientDir + file.getOriginalFilename();
-        File dest = new File(filePath);
-        file.transferTo(dest);
-
-        ClientFile clientFile = ClientFile.builder()
-                .fileName(file.getOriginalFilename())
-                .fileType(file.getContentType())
-                .filePath(filePath)
-                .client(client)
-                .build();
-
-        fileRepository.save(clientFile);
-        return mapToResponse(client);
-    }
-
-    // ✅ File yuklab olish
-    public byte[] downloadFile(Long clientId, Long fileId) throws IOException {
-        ClientFile file = fileRepository.findById(fileId)
-                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
-
-        if (!file.getClient().getId().equals(clientId)) {
-            throw new CustomException("File does not belong to this client", HttpStatus.FORBIDDEN);
-        }
-
-        Path path = Paths.get(file.getFilePath());
-        return Files.readAllBytes(path);
-    }
-
-    // ✅ File o‘chirish
-    public ClientResponse deleteFile(Long clientId, Long fileId) {
-        ClientFile file = fileRepository.findById(fileId)
-                .orElseThrow(() -> new CustomException("File not found", HttpStatus.NOT_FOUND));
-
-        if (!file.getClient().getId().equals(clientId)) {
-            throw new CustomException("File does not belong to this client", HttpStatus.FORBIDDEN);
-        }
-
-        File physicalFile = new File(file.getFilePath());
-        if (physicalFile.exists()) {
-            physicalFile.delete();
-        }
-
-        fileRepository.delete(file);
-        return mapToResponse(file.getClient());
-    }
-    public List<ClientResponse> searchClients(String query, PaymentStatus status) {
-        List<Client> clients = clientRepository.searchClients(query, status);
-        return clients.stream().map(this::mapToResponse).toList();
-    }
+    // ✅ Soft delete
     public void softDeleteClient(Long id) {
         Client client = clientRepository.findById(id)
                 .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
@@ -169,6 +359,7 @@ public class ClientService {
         clientRepository.save(client);
     }
 
+    // ✅ Archive
     public void archiveClient(Long id) {
         Client client = clientRepository.findById(id)
                 .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
@@ -176,6 +367,7 @@ public class ClientService {
         clientRepository.save(client);
     }
 
+    // ✅ Restore
     public void restoreClient(Long id) {
         Client client = clientRepository.findById(id)
                 .orElseThrow(() -> new CustomException("Client not found", HttpStatus.NOT_FOUND));
@@ -184,6 +376,7 @@ public class ClientService {
         clientRepository.save(client);
     }
 
+    // ✅ Permanent delete
     public void permanentDeleteClient(Long id) {
         if (!clientRepository.existsById(id)) {
             throw new CustomException("Client not found", HttpStatus.NOT_FOUND);
@@ -191,52 +384,8 @@ public class ClientService {
         clientRepository.deleteById(id);
     }
 
-    public List<ClientResponse> getArchivedClients() {
-        return clientRepository.findAllArchived().stream()
-                .map(this::mapToResponse)
-                .toList();
-    }
-
-    public List<ClientResponse> getDeletedClients() {
-        return clientRepository.findAllDeleted().stream()
-                .map(this::mapToResponse)
-                .toList();
-    }
+    // ✅ Authenticated user olish
 
 
-    private ClientResponse mapToResponse(Client client) {
-        // 📌 LeadContactHistory olish
-        List<LeadContactHistoryResponse> history = List.of();
-        if (client.getLeadId() != null) { // Agar client lead’dan convert qilingan bo‘lsa
-            history = historyService.getLeadHistory(client.getLeadId());
-        }
-
-        // 📌 Reception belgilagan keladigan vaqtni olish
-        LocalDateTime nextVisit = visitScheduleRepository
-                .findFirstByClientIdAndStatusOrderByScheduledDateTimeAsc(
-                        client.getId(), VisitStatus.PLANNED
-                )
-                .map(VisitSchedule::getScheduledDateTime)
-                .orElse(null);
-
-        return ClientResponse.builder()
-                .id(client.getId())
-                .fullName(client.getFullName())
-                .phone1(client.getPhone1())
-                .phone2(client.getPhone2())
-                .region(client.getRegion())
-                .targetCountry(client.getTargetCountry())
-                .initialPayment(client.getInitialPayment())
-                .initialPaymentDate(client.getInitialPaymentDate())
-                .totalPayment(client.getTotalPayment())
-                .totalPaymentDate(client.getTotalPaymentDate())
-                .paymentStatus(client.getPaymentStatus())
-                .files(client.getFiles() != null
-                        ? client.getFiles().stream().map(ClientFile::getFileName).toList()
-                        : List.of())
-                .contactHistory(history)   // ✅ Operator gaplashgan tarixi
-                .nextVisitDate(nextVisit)  // ✅ Reception belgilagan tashrif
-                .build();
-    }
 
 }
